name:                inf-vector
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/inf-vector#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.InfVector
                     , Data.BitVector.Mutable
                     , Data.InfVector.Backing
                     , Data.InfVector.Boxed
                     , Data.InfVector.BitVector
                     , Data.InfVector.Unboxed
  other-modules:       Data.InfVector.Base
  build-depends:       base >= 4.7 && < 5, vector, monad-loops
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2

source-repository head
  type:     git
  location: https://github.com/githubuser/inf-vector
